syntax = "proto3";

package block;

option go_package = "/proto";

service Blockchain {
  rpc SendBlock(SendBlockRequest) returns (SendBlockResponse);
}

message SendBlockRequest {
  string prevHash = 1;
  string data = 2;
};

message SendBlockResponse {};